# perfmark

./: .gitignore  .travis.yml  CONTRIBUTING.md  NOTICE  README.md  WORKSPACE  build.gradle  settings.gradle  settings.gradle.kts
.github/workflows/: gradle-wrapper-validation.yml  gradle.yml
agent/: build.gradle  build.gradle.kts
agent/src/main/java/io/perfmark/agent/: Main.java  MethodVisitorRecorder.java  MethodWrappingWriter.java  NonMergingClassWriter.java  PerfMarkAgent.java  PerfMarkClassVisitor.java  PerfMarkMethodRewriter.java  PerfMarkTransformer.java
agent/src/test/java/io/perfmark/agent/: PerfMarkMethodRewriterTest.java  PerfMarkTransformerTest.java  TransformerTestClasses.java
api/: BUILD.bazel  build.gradle  build.gradle.kts
api/src/jmh/java/io/grpc/contrib/perfmark/: EnabledBenchmark.java
api/src/jmh/java/io/perfmark/: ClassInitBenchmark.java  ClassInitBenchmarkTest.java  EnabledBenchmark.java  EnabledBenchmarkTest.java
api/src/jmhTest/java/io/perfmark/: PerfMarkBenchmark.java
api/src/main/java/io/grpc/contrib/perfmark/: Internal.java  Link.java  NoopGenerator.java  NoopMarkHolderProvider.java  PerfMark.java  PerfMarkCloseable.java  PerfMarkStorage.java  Tag.java
api/src/main/java/io/perfmark/: Impl.java  Internal.java  Link.java  NoopGenerator.java  NoopImpl.java  NoopMarkHolderProvider.java  PerfMark.java  PerfMarkCloseable.java  PerfMarkStorage.java  StringFunction.java  Tag.java  TaskCloseable.java  package-info.java
api/src/test/java/io/perfmark/: CompatibilityTest.java  PerfMarkStorageTest.java  PerfMarkTest.java  SecurityManagerTest.java
api/testing/: build.gradle.kts
api/testing/src/test/java/io/perfmark/apitesting/: ArtifactTest.java
buildscripts/: checkstyle.license  checkstyle.xml
doc/: design-constraints.md  fix-stop-task.md
examples/: build.gradle  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
impl/: BUILD.bazel  build.gradle  build.gradle.kts
impl-api/: build.gradle
impl/src/jmh/java/io/perfmark/impl/: SecretPerfMarkImplClassInitBenchmark.java
impl/src/main/java/io/perfmark/impl/: ConcurrentThreadLocal.java  Generator.java  GlobalMarkRecorder.java  Internal.java  LocalMarkHolder.java  LocalMarkRecorder.java  Mark.java  MarkHolder.java  MarkHolderProvider.java  MarkList.java  MarkRecorder.java  MarkRecorderProvider.java  MarkRecorderRef.java  Marker.java  MostlyThreadLocal.java  MostlyThreadLocalMarkHolder.java  MostlyThreadLocalMarkRecorder.java  NoopGenerator.java  NoopMarkHolderProvider.java  NoopMarkRecorderProvider.java  RecordedMarks.java  SecretMarkerFactory.java  SecretPerfMarkImpl.java  Storage.java  ThreadInfo.java  ThreadRef.java  ThreadRefInfo.java  package-info.java
impl/src/main/java9/: module-info.java
impl/src/main/java9/io/perfmark/impl/: Internal.java
impl/src/test/java/io/perfmark/impl/: ConcurrentThreadLocalTest.java  PerfMarkImplTest.java  StorageTest.java  ThreadRefInfoTest.java
implapi/: build.gradle
implapi/src/main/java/io/perfmark/: Generator.java  Internal.java  Mark.java  MarkHolder.java  MarkHolderProvider.java  MarkList.java  Marker.java  SecretMarkerFactory.java
java15/: build.gradle.kts
java19/: build.gradle.kts
java6/: BUILD.bazel  build.gradle
java6/src/jmh/java/io/perfmark/java6/: SynchronizedGlobalMarkHolderBenchmarkTest.java  SynchronizedMarkHolderBenchmark.java  SynchronizedMarkHolderBenchmarkTest.java  VolatileGeneratorBenchmark.java  VolatileGeneratorBenchmarkTest.java
java6/src/main/java/io/grpc/contrib/perfmark/java6/: Internal.java  SecretVolatileGenerator.java  package-info.java
java6/src/main/java/io/perfmark/java6/: Internal.java  SecretGenerator.java  SecretMarkRecorder.java  SecretSynchronizedGlobalMarkRecorder.java  SecretSynchronizedMarkHolderProvider.java  SecretSynchronizedMarkRecorderProvider.java  SecretVolatileGenerator.java  SynchronizedGlobalMarkRecorder.java  SynchronizedMarkHolder.java  SynchronizedMarkRecorder.java  package-info.java
java6/src/test/java/io/perfmark/java6/: AutoLoadTest.java  SynchronizedMarkHolderTest.java  VersionTest.java
java7/: BUILD.bazel  build.gradle
java9/: BUILD.bazel  build.gradle  build.gradle.kts
java9/src/jcstress/java/io/grpc/contrib/perfmark/java9/: PerfMarkStorageStress.java
java9/src/jcstress/java/io/perfmark/java9/: PerfMarkStorageStress.java
java9/src/jmh/java/io/grpc/contrib/perfmark/java9/: VarHandleGeneratorBenchmark.java  VarHandleMarkHolderBenchmark.java
java9/src/jmh/java/io/perfmark/java9/: VarHandleGeneratorBenchmark.java  VarHandleGeneratorBenchmarkTest.java  VarHandleMarkHolderBenchmark.java  VarHandleMarkHolderBenchmarkTest.java  VarHandleMarkRecorderBenchmarkTest.java  package-info.java
java9/src/main/java/: module-info.java
java9/src/main/java/io/grpc/contrib/perfmark/java9/: PackageAccess.java  VarHandleMarkHolder.java  package-info.java
java9/src/main/java/io/perfmark/java9/: Internal.java  PackageAccess.java  Reflect9.java  SecretGenerator.java  SecretMarkRecorder.java  SecretVarHandleGenerator.java  SecretVarHandleMarkHolderProvider.java  SecretVarHandleMarkRecorderProvider.java  VarHandleMarkHolder.java  VarHandleMarkRecorder.java  package-info.java
java9/src/test/java/io/grpc/contrib/perfmark/java9/: PerfMarkStorageTest.java  PerfMarkStressTest.java
java9/src/test/java/io/perfmark/java9/: AutoLoadTest.java  PerfMarkStorageTest.java  PerfMarkStressTest.java  VarHandleMarkHolderTest.java  VarHandleMarkRecorderTest.java  VersionTest.java
testing/: build.gradle.kts
trace-writer/: build.gradle
traceviewer/: BUILD.bazel  build.gradle  build.gradle.kts
traceviewer/src/main/java/io/perfmark/traceviewer/: TraceEventViewer.java  package-info.java
traceviewer/src/test/java/io/perfmark/traceviewer/: TraceEventViewerTest.java
tracewriter/: BUILD.bazel  build.gradle  build.gradle.kts
tracewriter/src/main/java/io/perfmark/tracewriter/: MarkListWalker.java  TraceEvent.java  TraceEventWriter.java  package-info.java
tracewriter/src/test/java/io/perfmark/tracewriter/: TraceEventWriterTest.java
util/: build.gradle
(+79 files in other folders)
