java_library(
    name = "api",
    visibility = ["//visibility:public"],
    exports = [
        ":link",
        ":perfmark",
        ":tag",
        ":stringfunction",
    ],
)

java_library(
    name = "perfmark",
    srcs = glob(["src/main/java/io/perfmark/PerfMark.java",
             "src/main/java/io/perfmark/TaskCloseable.java"]),
    deps = [
        ":impl",
        ":link",
        ":tag",
        ":stringfunction",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "tag",
    srcs = glob(["src/main/java/io/perfmark/Tag.java"]),
    visibility = ["//:__subpackages__"],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)

java_library(
    name = "link",
    srcs = glob(["src/main/java/io/perfmark/Link.java"]),
    visibility = ["//:__subpackages__"],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)

java_library(
    name = "stringfunction",
    visibility = ["//:__subpackages__"],
    srcs = glob(["src/main/java/io/perfmark/StringFunction.java"]),
)

java_library(
    name = "impl",
    srcs = glob(["src/main/java/io/perfmark/Impl.java"]),
    visibility = ["//:__subpackages__"],
    deps = [
        ":link",
        ":tag",
        ":stringfunction",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
