java_library(
    name = "impl",
    srcs = [
        "src/main/java/io/perfmark/impl/SecretPerfMarkImpl.java",
    ],
    deps = [
        ":generator",
        ":mark",
        ":mark-recorder",
        ":storage",
        "//api:impl",
        "//api:link",
        "//api:tag",
        "//api:stringfunction",
    ],
)

java_library(
    name = "mark-recorder",
    srcs = ["src/main/java/io/perfmark/impl/MarkRecorder.java"],
    visibility = ["//:__subpackages__"],
)

java_library(
    name = "thread-info",
    srcs = ["src/main/java/io/perfmark/impl/ThreadInfo.java"],
    visibility = ["//:__subpackages__"],
)

java_library(
    name = "mark-recorder-ref",
    srcs = [
      "src/main/java/io/perfmark/impl/MarkRecorderRef.java",
      "src/main/java/io/perfmark/impl/ThreadRef.java",
      "src/main/java/io/perfmark/impl/ThreadRefInfo.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
      ":thread-info",
    ],
)

java_library(
    name = "generator",
    srcs = ["src/main/java/io/perfmark/impl/Generator.java"],
    visibility = ["//:__subpackages__"],
)

java_library(
    name = "storage",
    srcs = [
        "src/main/java/io/perfmark/impl/Storage.java",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":generator",
        ":mark",
        ":mark-holder",
        ":mark-list",
    ],
)

java_library(
    name = "mark-holder",
    srcs = ["src/main/java/io/perfmark/impl/MarkHolder.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":mark-list",
    ],
)

java_library(
    name = "mark",
    srcs = ["src/main/java/io/perfmark/impl/Mark.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":generator",
    ],
)

java_library(
    name = "mark-list",
    srcs = ["src/main/java/io/perfmark/impl/MarkList.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":mark",
    ],
)
