java_library(
    name = "tracewriter",
    srcs = glob([
        "src/main/java/io/perfmark/traceviewer/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//tracewriter",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
