java_library(
    name = "tracewriter",
    srcs = glob([
        "src/main/java/io/perfmark/tracewriter/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//impl:mark",
        "//impl:mark-list",
        "//impl:storage",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
